--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,88 +1,90 @@
 body {
-    background-color: #F6EFE1;
-    margin: 0;
-    padding: 0;
-  }
+  background-color: #F6EFE1;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 40px;
-    background-color: #F6EFE1;
-    width: 1170px;
-    position: relative;
-    z-index: 10;
-    margin: 0 auto;
-  }
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px 48px; /* slightly more space */
+  background-color: #F6EFE1;
+  width: 100%;
+  position: relative;
+  z-index: 10;
+  margin: 0;
+  box-sizing: border-box;
+}
 
-  .logo-image {
-    height: 66px;
-    width: auto;
-  }
+.logo-image {
+  height: 90px; /* Increased from 66px */
+  width: auto;
+}
 
-  .logo-link {
-    display: flex;
-    align-items: center;
-    margin-left: 0px;
-    margin-top: 33px;
-  }
+.logo-link {
+  display: flex;
+  align-items: center;
+  margin-left: 0px;
+  margin-top: 20px; /* Reduced top margin so it stays balanced */
+}
 
-  nav {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background: #000;
-    padding: 15px 36px; /* Updated padding */
-    width: fit-content;
-    height: auto;
-    flex-shrink: 0;
-    border-radius: 50px;
-    z-index: 1000;
-    margin: 20px 0px 0 auto;
-  }  
+nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background: #000;
+  padding: 20px 48px; /* Bigger pill shape */
+  width: fit-content;
+  height: auto;
+  flex-shrink: 0;
+  border-radius: 60px; /* Bigger roundness */
+  z-index: 1000;
+  margin: 20px 0 0 auto;
+}
 
-  #navbar {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-  #navbar li {
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
-  }
+#navbar li {
+  list-style: none;
+  padding: 0 24px;
+  position: relative;
+}
 
-  #navbar li a {
-    text-decoration: none;
-    color: #FFF;
-    font-family: "IBM Plex Mono";
-    font-size: 24.678px;
-    font-weight: 400;
-    font-style: normal;
-    line-height: normal;
-    width: 70.92px;
-    height: 30px;
-    transition: 0.3s ease-in-out;
-    flex-shrink: 0;
-  }
+#navbar li a {
+  text-decoration: none;
+  color: #FFF;
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 26px; /* Slightly larger font */
+  font-weight: 400;
+  font-style: normal;
+  line-height: normal;
+  width: auto;
+  height: 30px;
+  transition: 0.3s ease-in-out;
+  flex-shrink: 0;
+}
 
-  #navbar li a:hover,
-  #navbar li a.active {
-    color: #17cf97;
-  }
+#navbar li a:hover,
+#navbar li a.active {
+  color: #17cf97;
+}
 
-  #navbar li a:hover::after,
-  #navbar li a.active::after {
-    content: "";
-    width: 30%;
-    height: 2px;
-    background: #17cf97;
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
-  }
+#navbar li a:hover::after,
+#navbar li a.active::after {
+  content: "";
+  width: 30%;
+  height: 2px;
+  background: #17cf97;
+  position: absolute;
+  bottom: -4px;
+  left: 20px;
+}
